Supports MSYS2